--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2/.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
 <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 <script>window.d3 || document.write('<script src="js/vendor/d3.v3.min.js"><\/script>')</script>
