added regions for real now

--- a/martynas.html
+++ b/martynas.html
@@ -92,8 +92,13 @@
                 <div class="filters-block-part">
                     <!--<label for="region">Region:</label>-->
                     <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Regions">
-                        <option value="1">Option 1</option>
-                        <option value="2">Option 2</option>
+                        <option value="1">Africa</option>
+                        <option value="2">Asia</option>
+                        <option value="3">Europe</option>
+                        <option value="4">Oceania</option>
+                        <option value="5">North America</option>
+                        <option value="6">Central America</option>
+                        <option value="7">North America</option>
                     </select>
                 </div>
                 <div class="filters-block-part">
