--- a/martynas.html
+++ b/martynas.html
@@ -91,19 +91,19 @@
                 <span>Locations</span>
                 <div class="filters-block-part">
                     <!--<label for="region">Region:</label>-->
-                    <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Regions">
-                        <option value="1">Africa</option>
-                        <option value="2">Asia</option>
-                        <option value="3">Europe</option>
-                        <option value="4">Oceania</option>
-                        <option value="5">North America</option>
-                        <option value="6">Central America</option>
-                        <option value="7">North America</option>
+                    <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Select regions">
+                        <option value="Africa">Africa</option>
+                        <option value="Asia">Asia</option>
+                        <option value="Europe">Europe</option>
+                        <option value="Oceania">Oceania</option>
+                        <option value="North America">North America</option>
+                        <option value="Central America">Central America</option>
+                        <option value="North America">North America</option>
                     </select>
                 </div>
                 <div class="filters-block-part">
                     <!--<label for="country">Country:</label>-->
-                    <select class="select-multiple" name="country" id="country" multiple="multiple" placeholder="Countries">
+                    <select class="select-multiple" name="country" id="country" multiple="multiple" placeholder="Select countries">
                         <option value="1">Option 1</option>
                         <option value="2">Option 2</option>
                     </select>
