nice and tidy. merged style.css with main.css

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/jquery-ui.css" rel="stylesheet">
     <link href="css/select2.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="js/vendor/jquery-1.10.2.min.js"></script>
     <script src="js/vendor/d3.v3.min.js"></script>
@@ -104,8 +103,8 @@
                     <button type="button" id="reset">RESET FILTERS</button>
                 </div>
             </div>
-
         </div>
+    </div>
 </div>
 
 <script>
@@ -113,5 +112,6 @@
         scatter();
     });
 </script>
+
 </body>
 </html>
