added correlation calculations

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <select name="y_axis" id="y_axis" class="axes">
                     </select>
                 </div>
+                <div class="filters-block-part">
+                    <p id="correlation"></p>
+                </div>
 
             </div>
 
@@ -81,11 +84,10 @@
                     <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Regions">
                         <option value="Africa">Africa</option>
                         <option value="Asia">Asia</option>
-                        <option value="Europe">Europe</option>
-                        <option value="Oceania">Oceania</option>
-                        <option value="North America">North America</option>
                         <option value="Central America">Central America</option>
+                        <option value="Europe">Europe</option>
                         <option value="North America">North America</option>
+                        <option value="Oceania">Oceania</option>                                                
                     </select>
                 </div>
                 <div class="filters-block-part">                    
