--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@
             <div class="filters-block">
                 <span title="Filter the data by selecting regions and countries. CLEAR ALL button clears selected regions and countries. SELECT ALL adds all countries to the list.">Locations (?)</span>
                 <div class="filters-block-part">                    
-                    <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Regions">
+                    <select class="select-multiple" name="region" id="region" multiple="multiple" placeholder="Select regions">
                         <option value="Africa">Africa</option>
                         <option value="Asia">Asia</option>
-                        <option value="Central America">Central America</option>
                         <option value="Europe">Europe</option>
+                        <option value="Oceania">Oceania</option>
+                        <option value="Carribean">Carribean</option>
                         <option value="North America">North America</option>
-                        <option value="Oceania">Oceania</option>            
+                        <option value="Central America">Central America</option>
                         <option value="South America">South America</option>                                    
                     </select>
                 </div>
                 <div class="filters-block-part">                    
-                    <select class="select-multiple" name="country" id="country" multiple="multiple" placeholder="Countries">
+                    <select class="select-multiple" name="country" id="country" multiple="multiple" placeholder="Select countries">
                     </select>
                     <div class="filters-block-part">
                         <button type="button" id="clear_all">CLEAR ALL</button>
